<resources>
    <string name="app_name">MyUdaciousAppPortfolio</string>

    <string name="action_settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="material_design">Material Design</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="header">Nanodegree Apps</string>
</resources>
