<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:layout_margin="8dp"/>
    <Button
        android:id="@+id/popular_movies"
        android:text="@string/popular_movies"
        style="@style/buttons_style"/>
    <Button
        android:id="@+id/stock_hawk"
        android:text="@string/stock_hawk"
        style="@style/buttons_style"/>
    <Button
        android:id="@+id/build_it_bigger"
        android:text="@string/build_it_bigger"
        style="@style/buttons_style"/>
    <Button
        android:id="@+id/material_design"
        android:text="@string/material_design"
        style="@style/buttons_style"/>
    <Button
        android:id="@+id/go_ubiquitous"
        android:text="@string/go_ubiquitous"
        style="@style/buttons_style"/>
    <Button
        android:id="@+id/capstone"
        android:text="@string/capstone"
        style="@style/buttons_style"/>




</LinearLayout>
